src/test/resources/public/input/typechecking/fail/access/fail01.jova
class Test{
  private int dontTouchMe;
}

class Main {

  public int main() {
    Test test;
    test = new Test;
    test.dontTouchMe = 1;
    return 0;
  }

}